Fix : Security 수정, MyPage 수정